--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
           <li><a href="#">Blogs</a></li>
         </ul>
       </nav>
-
       <button type="button">Gift Finder</button>
     </header>
+    <main>
+      <section>
+        <h1>Find a gift for your wife or girlfriend</h1>
+        <p>Struggling to find a gift for your wife or girlfriend?
+          No problem!</p>
+          <button type="button">Find gift now</button>
+          <img src="./images/section-1.jpg" alt="section-1" width="719">
+      </section>
+    </main>
   </body>
 </html>
