--- a/index.html
+++ b/index.html
@@ -24,10 +24,22 @@
     <main>
       <section>
         <h1>Find a gift for your wife or girlfriend</h1>
-        <p>Struggling to find a gift for your wife or girlfriend?
-          No problem!</p>
-          <button type="button">Find gift now</button>
-          <img src="./images/section-1.jpg" alt="section-1" width="719">
+        <p>
+          Struggling to find a gift for your wife or girlfriend? No problem!
+        </p>
+        <button type="button">Find gift now</button>
+        <img src="./images/section-1.jpg" alt="section-1" width="720" />
+      </section>
+      <section>
+        <img src="./images/media-background.jpg" width="720" height="600" alt="images" />
+        <h2>How we work</h2>
+        <p>
+          We’ve actually already asked hundreds of women what they want, and
+          made a database with the results. All you have to do is take our short
+          survey that only takes seconds, and our proprietary algorithm will
+          match you with a few perfect gift options.
+        </p>
+        <a href="#">Learn More</a>
       </section>
     </main>
   </body>
