--- a/index.html
+++ b/index.html
@@ -1,46 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Freebie</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html">
-          <img src="./images/logo.png" alt="logo" />
-        </a>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Blogs</a></li>
-        </ul>
-      </nav>
-      <button type="button">Gift Finder</button>
-    </header>
-    <main>
-      <section>
-        <h1>Find a gift for your wife or girlfriend</h1>
-        <p>
-          Struggling to find a gift for your wife or girlfriend? No problem!
-        </p>
-        <button type="button">Find gift now</button>
-        <img src="./images/section-1.jpg" alt="section-1" width="720" />
-      </section>
-      <section>
-        <img src="./images/media-background.jpg" width="720" height="600" alt="images" />
-        <h2>How we work</h2>
-        <p>
-          We’ve actually already asked hundreds of women what they want, and
-          made a database with the results. All you have to do is take our short
-          survey that only takes seconds, and our proprietary algorithm will
-          match you with a few perfect gift options.
-        </p>
-        <a href="#">Learn More</a>
-      </section>
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Freebie</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="./index.html">
+        <img src="./images/logo.png" alt="logo" />
+      </a>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Blogs</a></li>
+      </ul>
+    </nav>
+    <button type="button">Gift Finder</button>
+  </header>
+  <main>
+    <section>
+      <h1>Find a gift for your wife or girlfriend</h1>
+      <p>
+        Struggling to find a gift for your wife or girlfriend? No problem!
+      </p>
+      <button type="button">Find gift now</button>
+      <img src="./images/section-1.jpg" alt="section-1" width="720" />
+    </section>
+    <section>
+      <img src="./images/media-background.jpg" width="720" height="600" alt="images" />
+      <h2>How we work</h2>
+      <p>
+        We’ve actually already asked hundreds of women what they want, and
+        made a database with the results. All you have to do is take our short
+        survey that only takes seconds, and our proprietary algorithm will
+        match you with a few perfect gift options.
+      </p>
+      <a href="#">Learn More</a>
+    </section>
+    <section>
+      <h2>Gifts for all Occasions</h2>
+      <p>“Try our web app to find the best gifts for all occasions”</p>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="./images/rectangle1.jpg" alt="rectangle1" width="270" height="270">
+            <h3>Birthday</h3>
+            <p>See More &#62;</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./images/rectangle2.jpg" alt="rectangle2" width="270" height="270">
+            <h3>Anniversary</h3>
+            <p>See More &#62;</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./images/rectangle3.jpg" alt="rectangle3" width="270" height="270">
+            <h3>Valentine's Day</h3>
+            <p>See More &#62;</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./images/rectangle4.jpg" alt="rectangle4" width="270" height="270">
+            <h3>Christmas</h3>
+            <p>See More &#62;</p>
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
+</body>
+
 </html>
