--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
         </li>
       </ul>
     </section>
+    <section>
+      <p>Ready to get started?</p>
+      <h2>Sign up or contact us</h2>
+      <ul>
+        <li><a href="#">Find gift now</a></li>
+        <li><a href="#">how it works</a></li>
+      </ul>
+     
+    </section>
   </main>
 </body>
 
