--- a/index.html
+++ b/index.html
@@ -86,6 +86,34 @@
       </ul>
      
     </section>
+    <section>
+      <h2>Our Best Blogs Ever</h2>
+      <p>“Try our blog to find the best tips and tricks to select your gift”</p>
+      <article>
+        <img src="./images/media.jpg" alt="images" width="400" height="370">
+        <p>Mr. John Doe</p>
+        <h3>The best way to wish your wife</h3>
+        <a href="#">Read More</a>
+      </article>
+    </section>
+    <section>
+     <ul>
+      <li>
+        <a href="#">
+          <h3>Database to find the gifts for your girlfriend</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+          <p>Read More</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <h3>How Artificial Intelligence read your mind to find the best gift</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+          <p>Read More</p>
+        </a>
+      </li>
+     </ul>
+    </section>
   </main>
 </body>
 
