--- a/index.html
+++ b/index.html
@@ -1,138 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Freebie</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Freebie</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/styles.css">
-</head>
-
-<body>
-  <header>
-    <div class="header-container container">
-      <nav class="nav">
-        <a class="header-logo" href="./index.html">
-          logo
-        </a>
-        <ul class="header-list">
-          <li class="header-item"><a class="header-link" href="./index.html">Home</a></li>
-          <li class="header-item"><a class="header-link" href="#">About Us</a></li>
-          <li class="header-item"><a class="header-link" href="#">Services</a></li>
-          <li class="header-item"><a class="header-link" href="#">Blogs</a></li>
+  <body>
+    <header>
+      <div class="header-container container">
+        <nav class="nav">
+          <a class="header-logo" href="./index.html"> logo </a>
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="header-link" href="./index.html">Home</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="#">About Us</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="#">Services</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="#">Blogs</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="header-btn" type="button">Gift Finder</button>
+      </div>
+    </header>
+    <main>
+      <section>
+        <div class="container container-box">
+          <div class="content">
+            <div class="content-second">
+              <h1 class="title-content">
+                Find a gift for your wife or girlfriend
+              </h1>
+              <p class="text-content">
+                Struggling to find a gift for your wife or girlfriend? No
+                problem!
+              </p>
+              <button type="button">Find gift now</button>
+            </div>
+          </div>
+          <img src="./images/section-1.jpg" alt="section-1" width="720" />
+        </div>
+      </section>
+      <section>
+        <img
+          src="./images/media-background.jpg"
+          width="720"
+          height="600"
+          alt="images"
+        />
+        <h2>How we work</h2>
+        <p>
+          We’ve actually already asked hundreds of women what they want, and
+          made a database with the results. All you have to do is take our short
+          survey that only takes seconds, and our proprietary algorithm will
+          match you with a few perfect gift options.
+        </p>
+        <a href="#">Learn More</a>
+      </section>
+      <section>
+        <h2>Gifts for all Occasions</h2>
+        <p>“Try our web app to find the best gifts for all occasions”</p>
+        <ul>
+          <li>
+            <a href="#">
+              <img
+                src="./images/rectangle1.jpg"
+                alt="rectangle1"
+                width="270"
+                height="270"
+              />
+              <h3>Birthday</h3>
+              <p>See More &#62;</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/rectangle2.jpg"
+                alt="rectangle2"
+                width="270"
+                height="270"
+              />
+              <h3>Anniversary</h3>
+              <p>See More &#62;</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/rectangle3.jpg"
+                alt="rectangle3"
+                width="270"
+                height="270"
+              />
+              <h3>Valentine's Day</h3>
+              <p>See More &#62;</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/rectangle4.jpg"
+                alt="rectangle4"
+                width="270"
+                height="270"
+              />
+              <h3>Christmas</h3>
+              <p>See More &#62;</p>
+            </a>
+          </li>
         </ul>
-      </nav>
-      <button class="header-btn" type="button">Gift Finder</button>
-    </div>
-  </header>
-  <main>
-    <section>
-      <h1>Find a gift for your wife or girlfriend</h1>
-      <p>
-        Struggling to find a gift for your wife or girlfriend? No problem!
-      </p>
-      <button type="button">Find gift now</button>
-      <img src="./images/section-1.jpg" alt="section-1" width="720" />
-    </section>
-    <section>
-      <img src="./images/media-background.jpg" width="720" height="600" alt="images" />
-      <h2>How we work</h2>
-      <p>
-        We’ve actually already asked hundreds of women what they want, and
-        made a database with the results. All you have to do is take our short
-        survey that only takes seconds, and our proprietary algorithm will
-        match you with a few perfect gift options.
-      </p>
-      <a href="#">Learn More</a>
-    </section>
-    <section>
-      <h2>Gifts for all Occasions</h2>
-      <p>“Try our web app to find the best gifts for all occasions”</p>
-      <ul>
-        <li>
-          <a href="#">
-            <img src="./images/rectangle1.jpg" alt="rectangle1" width="270" height="270" />
-            <h3>Birthday</h3>
-            <p>See More &#62;</p>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="./images/rectangle2.jpg" alt="rectangle2" width="270" height="270" />
-            <h3>Anniversary</h3>
-            <p>See More &#62;</p>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="./images/rectangle3.jpg" alt="rectangle3" width="270" height="270" />
-            <h3>Valentine's Day</h3>
-            <p>See More &#62;</p>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="./images/rectangle4.jpg" alt="rectangle4" width="270" height="270" />
-            <h3>Christmas</h3>
-            <p>See More &#62;</p>
-          </a>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <p>Ready to get started?</p>
-      <h2>Sign up or contact us</h2>
-      <ul>
-        <li><a href="#">Find gift now</a></li>
-        <li><a href="#">how it works</a></li>
-      </ul>
-    </section>
-    <section>
-      <h2>Our Best Blogs Ever</h2>
-      <p>
-        “Try our blog to find the best tips and tricks to select your gift”
-      </p>
-      <article>
-        <img src="./images/media.jpg" alt="images" width="400" height="370" />
-        <p>Mr. John Doe</p>
-        <h3>The best way to wish your wife</h3>
-        <a href="#">Read More</a>
-      </article>
-    </section>
-    <section>
-      <ul>
-        <li>
-          <a href="#">
-            <h3>Database to find the gifts for your girlfriend</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore...
-            </p>
-            <p>Read More</p>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <h3>
-              How Artificial Intelligence read your mind to find the best gift
-            </h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore...
-            </p>
-            <p>Read More</p>
-          </a>
-        </li>
-      </ul>
-    </section>
-  </main>
-</body>
-
+      </section>
+      <section>
+        <p>Ready to get started?</p>
+        <h2>Sign up or contact us</h2>
+        <ul>
+          <li><a href="#">Find gift now</a></li>
+          <li><a href="#">how it works</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Best Blogs Ever</h2>
+        <p>
+          “Try our blog to find the best tips and tricks to select your gift”
+        </p>
+        <article>
+          <img src="./images/media.jpg" alt="images" width="400" height="370" />
+          <p>Mr. John Doe</p>
+          <h3>The best way to wish your wife</h3>
+          <a href="#">Read More</a>
+        </article>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <a href="#">
+              <h3>Database to find the gifts for your girlfriend</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore...
+              </p>
+              <p>Read More</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h3>
+                How Artificial Intelligence read your mind to find the best gift
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore...
+              </p>
+              <p>Read More</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
