--- a/index.html
+++ b/index.html
@@ -63,20 +63,26 @@
         </div>
       </section>
       <section>
-        <img
-          src="./images/media-background.jpg"
-          width="720"
-          height="600"
-          alt="images"
-        />
-        <h2>How we work</h2>
-        <p>
-          We’ve actually already asked hundreds of women what they want, and
-          made a database with the results. All you have to do is take our short
-          survey that only takes seconds, and our proprietary algorithm will
-          match you with a few perfect gift options.
-        </p>
-        <a href="#">Learn More</a>
+        <div class="container container-box">
+          <img
+            src="./images/media-background.jpg"
+            width="720"
+            height="600"
+            alt="images"
+          />
+          <div class="content">
+            <div class="content-wrap">
+              <h2 class="title-content2">How we work</h2>
+              <p class="about-us-text">
+                We’ve actually already asked hundreds of women what they want,
+                and made a database with the results. All you have to do is take
+                our short survey that only takes seconds, and our proprietary
+                algorithm will match you with a few perfect gift options.
+              </p>
+              <a href="#">Learn More</a>
+            </div>
+          </div>
+        </div>
       </section>
       <section>
         <h2>Gifts for all Occasions</h2>
